--- a/views/user/account.phtml
+++ b/views/user/account.phtml
@@ -46,6 +46,7 @@
             }
         ?> 
         maxlength="50" onpaste="return false;">
+        <span id="error_first_name"></span>
 
         <label for="last_name">Nom</label>
         <input type="text" name="last_name" id="last_name"
@@ -60,7 +61,7 @@
             }
         ?> 
         maxlength="50" onpaste="return false;">
-        <span id="error_first_name"></span>
+        <span id="error_last_name"></span>
 
         <label for="tel">Téléphone</label>
         <input type="text" name="tel" id="tel"
@@ -75,6 +76,7 @@
             }
         ?>
         maxlength="10" onpaste="return false;">
+        <span id="error_tel"></span>
 
         <label for="address">Address</label>
         <input type="text" name="address" id="address"
@@ -89,7 +91,7 @@
             }
         ?>
         maxlength="255" onpaste="return false;">
-        <span id="error_tel"></span>
+        <span id="error_address"></span>
 
         <label for="zip">Code Postal</label>
         <input type="text" name="zip" id="zip"
@@ -104,6 +106,7 @@
             }
         ?>
         maxlength="15" onpaste="return false;">
+        <span id="error_zip"></span>
 
         <label for="city">Ville</label>
         <input type="text" name="city" id="city"
@@ -118,8 +121,9 @@
             }
         ?>
         maxlength="100" onpaste="return false;">
+        <span id="error_city"></span>
         
-        <input type="submit" value="Editer mon profil">
+        <input type="submit" value="Éditer mon profil">
     </form>
 </main>
 <script type="module" src="assets/js/account.js"></script>
