Fin des ajustements de sécurité des entrées users et infos

--- a/views/guest/login.phtml
+++ b/views/guest/login.phtml
@@ -1,9 +1,9 @@
 
 <?php
-    if(isset($this->data["message"])) //*Si on à un message dans la data
+    if(isset($this->data["message"]) && $this->data["message"][1] === "general") //*Si on à un message dans la data
     {
         ?>
-        <span class="advert"><?=$this->data["message"]; ?></span>
+        <span class="succes"><?=$this->data["message"][0]; ?></span>
         <?php
     }
 ?>
@@ -12,9 +12,25 @@
     <form action="index.php?route=login" method="POST" id="login_form">
         <label for="username_email">Username / Email</label>
         <input type="text" name="username_email" id="username_email" autocomplete="username" required maxlength="50" onpaste="return false;">
+        <span id="error_username_email">
+        <?php
+            if(isset($this->data["message"]) && $this->data["message"][1] === "username_email")
+            {
+                echo $this->data["message"][0];
+            }
+        ?>
+        </span>
 
         <label for="password">Password</label>
         <input type="password" name="password" id="password" autocomplete="current-password" required maxlength="50" onpaste="return false;">
+        <span id="error_password">
+        <?php
+            if(isset($this->data["message"]) && $this->data["message"][1] === "password")
+            {
+                echo $this->data["message"][0];
+            }
+        ?>
+        </span>
 
         <input type="submit" value="Login">
     </form>
