--- a/views/user/account.phtml
+++ b/views/user/account.phtml
@@ -1,9 +1,9 @@
 <?php
-    if(isset($this->data["message"])) //*Si on à un message dans la data
+    if(isset($this->data["message"]) && $this->data["message"][1] === "general") //* Si on à un message dans la data
     {
-        ?>
-        <span class="advert"><?=$this->data["message"]; ?></span>
-        <?php
+    ?>
+        <span class="succes"><?=$this->data["message"][0]; ?></span>
+    <?php
     }
     if(isset($this->data["user"]))
     {
@@ -19,19 +19,47 @@
     <form action="index.php?route=account" method="POST" id="account_form">
         <label for="username">Username</label>
         <input type="text" name="username" id="username" value=<?=$user->getUsername(); ?> maxlength="50" onpaste="return false;">
-        <span id="error_username"></span>
+        <span id="error_username">
+        <?php
+            if(isset($this->data["message"]) && $this->data["message"][1] === "username")
+            {
+                echo $this->data["message"][0];
+            }
+        ?>
+        </span>
 
         <label for="email">Email</label>
         <input type="email" name="email" id="email" value=<?=$user->getEmail(); ?> maxlength="50" onpaste="return false;">
-        <span id="error_email"></span>
+        <span id="error_email">
+        <?php
+            if(isset($this->data["message"]) && $this->data["message"][1] === "email")
+            {
+                echo $this->data["message"][0];
+            }
+        ?>
+        </span>
 
         <label for="password">Password</label>
         <input type="password" name="password" id="password" minlength="8" maxlength="50" onpaste="return false;">
-        <span id="error_password"></span>
+        <span id="error_password">
+        <?php
+            if(isset($this->data["message"]) && $this->data["message"][1] === "password")
+            {
+                echo $this->data["message"][0];
+            }
+        ?>
+        </span>
 
         <label for="confirm_password">Confirm password</label>
         <input type="password" name="confirm_password" id="confirm_password" minlength="8" maxlength="50" onpaste="return false;">
-        <span id="error_confirm_password"></span>
+        <span id="error_confirm_password">
+        <?php
+            if(isset($this->data["message"]) && $this->data["message"][1] === "confirm_password")
+            {
+                echo $this->data["message"][0];
+            }
+        ?>
+        </span>
 
         <label for="first_name">Prénom</label>
         <input type="text" name="first_name" id="first_name" 
@@ -46,7 +74,14 @@
             }
         ?> 
         maxlength="50" onpaste="return false;">
-        <span id="error_first_name"></span>
+        <span id="error_first_name">
+        <?php
+            if(isset($this->data["message"]) && $this->data["message"][1] === "first_name")
+            {
+                echo $this->data["message"][0];
+            }
+        ?>
+        </span>
 
         <label for="last_name">Nom</label>
         <input type="text" name="last_name" id="last_name"
@@ -61,7 +96,14 @@
             }
         ?> 
         maxlength="50" onpaste="return false;">
-        <span id="error_last_name"></span>
+        <span id="error_last_name">
+        <?php
+            if(isset($this->data["message"]) && $this->data["message"][1] === "last_name")
+            {
+                echo $this->data["message"][0];
+            }
+        ?>
+        </span>
 
         <label for="tel">Téléphone</label>
         <input type="text" name="tel" id="tel"
@@ -76,7 +118,14 @@
             }
         ?>
         maxlength="10" onpaste="return false;">
-        <span id="error_tel"></span>
+        <span id="error_tel">
+        <?php
+            if(isset($this->data["message"]) && $this->data["message"][1] === "tel")
+            {
+                echo $this->data["message"][0];
+            }
+        ?>
+        </span>
 
         <label for="address">Address</label>
         <input type="text" name="address" id="address"
@@ -91,7 +140,14 @@
             }
         ?>
         maxlength="255" onpaste="return false;">
-        <span id="error_address"></span>
+        <span id="error_address">
+        <?php
+            if(isset($this->data["message"]) && $this->data["message"][1] === "address")
+            {
+                echo $this->data["message"][0];
+            }
+        ?>
+        </span>
 
         <label for="zip">Code Postal</label>
         <input type="text" name="zip" id="zip"
@@ -106,7 +162,14 @@
             }
         ?>
         maxlength="15" onpaste="return false;">
-        <span id="error_zip"></span>
+        <span id="error_zip">
+        <?php
+            if(isset($this->data["message"]) && $this->data["message"][1] === "zip")
+            {
+                echo $this->data["message"][0];
+            }
+        ?>
+        </span>
 
         <label for="city">Ville</label>
         <input type="text" name="city" id="city"
@@ -121,7 +184,14 @@
             }
         ?>
         maxlength="100" onpaste="return false;">
-        <span id="error_city"></span>
+        <span id="error_city">
+        <?php
+            if(isset($this->data["message"]) && $this->data["message"][1] === "city")
+            {
+                echo $this->data["message"][0];
+            }
+        ?>
+        </span>
         
         <input type="submit" value="Éditer mon profil">
     </form>
