Remaking javascript for dashboard control

--- a/views/admin/dashboard.phtml
+++ b/views/admin/dashboard.phtml
@@ -252,7 +252,7 @@
     <section id="details" class="hidden"> 
     <!-- Section détails géré par javascript -->
     </section>
-    <section id="add-template-form" class="adding-section" class="hidden">
+    <section id="add-template-form" class="adding-section hidden">
         <h3>Ajouter une Template</h3>
         <form action="index.php?route=dashboard&add=template" method="POST">
             <label for="template_name">Nom</label>
@@ -270,7 +270,7 @@
             <input type="submit" value="Ajouter">
         </form>
     </section>
-    <section id="add-category-form" class="adding-section" class="hidden">
+    <section id="add-category-form" class="adding-section hidden">
         <h3>Ajouter une Catégorie</h3>
         <form action="index.php?route=dashboard&add=category" method="POST">
             <label for="category_name">Nom</label>
