--- a/views/guest/login.phtml
+++ b/views/guest/login.phtml
@@ -3,7 +3,7 @@
     if(isset($this->data["message"]) && $this->data["message"][1] === "general") //*Si on à un message dans la data
     {
         ?>
-        <span class="succes"><?=$this->data["message"][0]; ?></span>
+        <span class="success"><?=$this->data["message"][0]; ?></span>
         <?php
     }
 ?>
@@ -12,25 +12,21 @@
     <form action="index.php?route=login" method="POST" id="login_form">
         <label for="username_email">Username / Email</label>
         <input type="text" name="username_email" id="username_email" autocomplete="username" required maxlength="50" onpaste="return false;">
-        <span id="error_username_email">
-        <?php
+        <span id="error_username_email"><?php
             if(isset($this->data["message"]) && $this->data["message"][1] === "username_email")
             {
                 echo $this->data["message"][0];
             }
-        ?>
-        </span>
+        ?></span>
 
         <label for="password">Password</label>
         <input type="password" name="password" id="password" autocomplete="current-password" required maxlength="50" onpaste="return false;">
-        <span id="error_password">
-        <?php
+        <span id="error_password"><?php
             if(isset($this->data["message"]) && $this->data["message"][1] === "password")
             {
                 echo $this->data["message"][0];
             }
-        ?>
-        </span>
+        ?></span>
 
         <input type="submit" value="Login">
     </form>
