--- a/views/user/contact.phtml
+++ b/views/user/contact.phtml
@@ -3,7 +3,7 @@
     if(isset($this->data["message"])) //*Si on à un message dans la data
     {
         ?>
-        <span class="advert"><?=$this->data["message"]; ?></span>
+        <span class="success"><?=$this->data["message"]; ?></span>
         <?php
     }
 ?>
