--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -16,58 +16,44 @@
   display: none;
 }
 
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 2rem;
-  height: 1rem;
-  margin-left: 0.5rem;
+.edit-btn {
+  height: 1.25rem;
+  width: 3rem;
+  margin-left: 0.75rem;
+  background-color: blue;
+  color: white;
 }
 
-.switch input {
-  opacity: 0;
-  width: 0;
-  height: 0;
+.remove-btn {
+  height: 1.25rem;
+  width: 5rem;
+  margin-left: 0.75rem;
+  background-color: red;
+  color: white;
 }
 
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  transition: 0.4s;
+.edit-btn:hover {
+  background-color: rgb(56, 56, 107);
 }
 
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 0.8rem;
-  width: 0.8rem;
-  left: 0.1rem;
-  bottom: 0.1rem;
-  background-color: white;
-  transition: 0.4s;
+.remove-btn:hover {
+  background-color: rgb(131, 67, 67);
 }
 
-input:checked + .slider {
-  background-color: #2196F3;
+td {
+  padding-left: 0.5rem;
+  border-bottom: solid 1px black;
 }
 
-input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3;
+tr, td, th {
+  min-width: 7rem;
+  max-width: 10rem;
+  height: 1.25rem;
+  overflow: hidden;
+  white-space: nowrap;
 }
 
-input:checked + .slider:before {
-  transform: translateX(1rem);
-}
-
-.slider.round {
-  border-radius: 34px;
-}
-
-.slider.round:before {
-  border-radius: 50%;
+tr td, th:first-child {
+  min-width: 0;
+  max-width: 1.5rem;
 }/*# sourceMappingURL=style.css.map */
