--- a/views/admin/dashboard.phtml
+++ b/views/admin/dashboard.phtml
@@ -1,25 +1,16 @@
-<?php
-    $userManager = new UserManager();
-    $messageManager = new MessageManager();
-    $reviewManager = new ReviewManager();
-    $infoManager = new InfoManager();
-    $templateManager = new TemplateManager();
-    // $quotationManager = new QuotationManager();
-    $categoryManager = new CategoryManager();
-    // $appointmentManager = new AppointmentManager();
-?>
 <!-- ------------------------------------------------------------------------------------- -->
 <!-- ----------------PANNEAU GAUCHE DES LIENS VERS LES TABLES DE CONTROL------------------ -->
 <!-- ------------------------------------------------------------------------------------- -->
 <aside class="left-pannel">
     <ul>
-        <li>
-            <a href="#" id="user-link">Users</a>
-            <a href="#" id="message-link">Messages</a>
-            <a href="#" id="template-link">Templates</a>
-            <a href="#" id="category-link">Catégories</a>
-            <a href="#" id="review-link">Reviews</a>
-        </li>
+        <li><a href="#" id="user-link">Utilisateurs</a></li>
+        <li><a href="#" id="message-link">Messages</a></li>
+        <li><a href="#" id="template-link">Templates</a></li>
+        <li><a href="#" id="category-link">Catégories</a></li>
+        <li><a href="#" id="review-link">Avis</a></li>
+        <li><a href="#" id="appointment-link">Rendez-vous</a></li>
+        <li><a href="#" id="quotation-link">Devis</a></li>
+        <li><a href="#" id="tag-link">Tags</a></li>
     </ul>
 </aside>
 
@@ -31,256 +22,22 @@
     <!-- --------------------------- -->
     <!-- ----SECTION DE RECHERCHE--- -->
     <!-- --------------------------- -->
-    <section id="search">
+    <section id="search-section">
         <label for="column-selection">Rechercher par :</label>
         <select name="column-selection" id="column-selection"></select>
         <label for="searchbar">Valeur :</label> 
         <input id="searchbar" type="text" name="searchbar" placeholder="Search..">
     </section>
-    
-    <!-- --------------------------- -->
-    <!-- ---SECTION UTILISATEURS---- -->
-    <!-- --------------------------- -->
-    <section id="user" class="hidden">
-        <h2>Panneau de control des utilisateurs</h2>
-        <section>
-            <h3>Listing users</h3>
-            <table>
-                <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>Username</th>
-                        <th>Email</th>
-                        <th>Prénom</th>
-                        <th>Nom</th>
-                        <th>Téléphone</th>
-                        <th>Role</th>
-                    </tr>
-                </thead>
-                <tbody>
-                <?php
-                    if($userManager->getUsers())
-                    {
-                        foreach($userManager->getUsers() as $user)
-                        {   
-                            $info = $infoManager->getInfoByUserId($user->getUserId());
-                    ?>
-                        <tr>
-                            <td class="data"><button class="row-btn" id="<?=$user->getUserId();?>"><?=$user->getUserId();?></button></td>
-                            <td class="data"><?=$user->getUsername();?></td>
-                            <td class="data"><?=$user->getEmail();?></td>
-                            <td class="data"><?=$info->getFirstName();?></td>
-                            <td class="data"><?=$info->getLastName();?></td>
-                            <td class="data"><?=$info->getTel();?></td>
-                            <td class="data"><?=$user->getRole();?></td>
-                        </tr>
-                        <?php
-                        }
-                    }
-                    ?>
-                </tbody>
-            </table>
-        </section>
-    </section>           
-    <!-- --------------------------- -->
-    <!-- ------SECTION MESSAGES----- -->
-    <!-- --------------------------- -->
-    <section id="message" class="hidden">
-        <h2>Panneau de control des messages</h2>
-        <section>
-            <h3>Listing messages</h3>
-            <table>
-                <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>Username</th>
-                        <th>Sujet</th>
-                        <th>Date</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <?php
-                    if($messageManager->getMessagesOrderedByDate())
-                    {
-                        foreach($messageManager->getMessagesOrderedByDate() as $message)
-                        {   
-                            $user = $userManager->getUserByUserId($message->getUserId());
-                            $username = $user->getUsername();
-                    ?>
-                        <tr>
-                            <td class="data"><button class="row-btn" id="<?=$message->getMessageId();?>"><?=$message->getMessageId();?></button></td>
-                            <td class="data"><?=$user->getUsername();?></td>
-                            <td class="data"><?=$message->getSubject();?></td>
-                            <td class="data"><?=$message->getSendDateTime();?></td>
-                        </tr>
-                    <?php
-                        }
-                    }
-                    ?>
-                </tbody>
-            </table>
-        </section>
-    </section>
-    <!-- --------------------------- -->
-    <!-- -----SECTION TEMPLATES----- -->
-    <!-- --------------------------- -->
-    <section id="template" class="hidden"> 
-        <h2>Panneau de control des templates</h2>
-        <section>
-            <h3>Listing templates</h3>
-            <button id="add-template-btn">Ajouter une template</button>
-            <table>
-                <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>Nom</th>
-                        <th>Chemin de l'image</th>
-                        <th>Prix</th>
-                        <th>Date de création</th>
-                        <th>Catégorie</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <?php
-                    if($templateManager->getTemplatesOrderedByCreationDate())
-                    {
-                        foreach($templateManager->getTemplatesOrderedByCreationDate() as $template)
-                        {   
-                            if($template->getCategoryId() !== null)
-                            {
-                                $category = $categoryManager->getCategoryByCategoryId($template->getCategoryId());
-                            }
-                    ?>
-                        <tr>
-                            <td class="data"><button class="row-btn" id="<?=$template->getTemplateId();?>"><?=$template->getTemplateId();?></button></td>
-                            <td class="data"><?=$template->getName();?></td>
-                            <td class="data"><?=$template->getImagePath();?></td>
-                            <td class="data"><?=$template->getPrice();?></td>
-                            <td class="data"><?=$template->getCreatedAt();?></td>
-                            <td class="data"><?php
-                                if(isset($category))
-                                {
-                                    echo $category->getName();
-                                }
-                                else
-                                {
-                                    echo "null";
-                                }
-                            ?></td>
-                        </tr>
-                    <?php
-                        }
-                    }
-                    ?>
-                </tbody>
-            </table>
-        </section>
-    </section>
-    <!-- --------------------------- -->
-    <!-- -------SECTION REVIEWS----- -->
-    <!-- --------------------------- -->
-    <section id="review" class="hidden">
-        <h2>Panneau de control des reviews</h2>
-        <section>
-            <h3>Listing reviews</h3>
-            <table>
-                <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>Username</th>
-                        <th>Sujet</th>
-                        <th>Date</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <?php
-                    if($reviewManager->getReviewsOrderedByDate())
-                    {
-                        foreach($reviewManager->getReviewsOrderedByDate() as $review)
-                        {   
-                            $user = $userManager->getUserByUserId($review->getUserId());
-                            $username = $user->getUsername();
-                    ?>
-                        <tr>
-                            <td class="data"><button class="row-btn" id="<?=$review->getReviewId();?>"><?=$review->getReviewId();?></button></td>
-                            <td class="data"><?=$user->getUsername();?></td>
-                            <td class="data"><?=$review->getSubject();?></td>
-                            <td class="data"><?=$review->getSendDate();?></td>
-                        </tr>
-                    <?php
-                        }
-                    }
-                    ?>
-                </tbody>
-            </table>
-        </section>
-    </section>
+
     <!-- ------------------------------ -->
-    <!-- -------SECTION CATEGORIES----- -->
+    <!-- -------SECTION DE CONTROL----- -->
     <!-- ------------------------------ -->
-    <section id="category" class="hidden">
-        <h2>Panneau de control des catégories</h2>
-        <section>
-            <h3>Listing templates</h3>
-            <button id="add-category-btn">Ajouter une catégorie</button>
-            <table>
-                <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>Nom</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <?php
-                    if($categoryManager->getCategories())
-                    {
-                        foreach($categoryManager->getCategories() as $category)
-                        { 
-                    ?>
-                        <tr>
-                            <td class="data"><button class="row-btn" id="<?=$category->getCategoryId();?>"><?=$category->getCategoryId();?></button></td>
-                            <td class="data"><?=$category->getName();?></td>
-                        </tr>
-                    <?php
-                        }
-                    }
-                    ?>
-                </tbody>
-            </table>
-        </section>
-    </section>
-    <section id="details" class="hidden"> 
-    <!-- Section détails géré par javascript -->
-    </section>
-    <section id="add-template-form" class="adding-section hidden">
-        <h3>Ajouter une Template</h3>
-        <form action="index.php?route=dashboard&add=template" method="POST">
-            <label for="template_name">Nom</label>
-            <input id="template_name" name="template_name" type="text" placeholder="Nom" required/>
+    <section id="control-section"></section>
 
-            <label for="template_description">Description</label>
-            <textarea id="template_description" name="template_description" placeholder="Votre texte ici..." required></textarea>
-
-            <label for="image_path">Image</label>
-            <input id="image_path" name="image_path" type="text" placeholder="Chemin de l'image" required/>
-
-            <label for="price">Prix</label>
-            <input id="price" name="price" type="text" placeholder="Prix" required/>
-
-            <input type="submit" value="Ajouter">
-        </form>
-    </section>
-    <section id="add-category-form" class="adding-section hidden">
-        <h3>Ajouter une Catégorie</h3>
-        <form action="index.php?route=dashboard&add=category" method="POST">
-            <label for="category_name">Nom</label>
-            <input id="category_name" name="category_name" type="text" placeholder="Nom" required/>
-
-            <label for="category_description">Description</label>
-            <textarea id="category_description" name="category_description" placeholder="Votre texte ici..." required></textarea>
-
-            <input type="submit" value="Ajouter">
-        </form>
-    </section>
+    <!-- ------------------------------ -->
+    <!-- -------SECTION D'ÉDITION------ -->
+    <!-- --------SECTION D'AJOUT------- -->
+    <!-- ------------------------------ -->
+    <section id="edit-section"></section>
 </main>
 <script type="module" src="assets/js/dashboard.js"></script>
