--- a/views/user/_navlist.phtml
+++ b/views/user/_navlist.phtml
@@ -1,5 +1,5 @@
 <ul class="navlist">
-    <li><a href="index.php">Page d'accueil</a></li>
+    <li><a href="index.php?route=homepage">Page d'accueil</a></li>
     <li><a href="index.php?route=shop">Vitrine</a></li>
     <li><a href="index.php?route=account">Mon compte</a></li>
     <li><a href="index.php?route=contact">Contactez moi</a></li>
