edit/delete/add en cours

--- a/views/admin/dashboard.phtml
+++ b/views/admin/dashboard.phtml
@@ -4,6 +4,7 @@
 <aside class="left-pannel">
     <ul>
         <li><a href="#" id="user-link">Utilisateurs</a></li>
+        <li><a href="#" id="info-link">Infos</a></li>
         <li><a href="#" id="message-link">Messages</a></li>
         <li><a href="#" id="template-link">Templates</a></li>
         <li><a href="#" id="category-link">Catégories</a></li>
@@ -30,6 +31,19 @@
     </section>
 
     <!-- ------------------------------ -->
+    <!-- -------NAVIGATION D'AJOUT----- -->
+    <!-- ------------------------------ -->
+    <section id="add-section">
+        <h3>Ajouter</h3>
+        <ul>
+            <li><a href="#" id="add-template">Templates</a></li>
+            <li><a href="#" id="add-category">Catégories</a></li>
+            <li><a href="#" id="add-appointment">Rendez-vous</a></li>
+            <li><a href="#" id="add-quotation">Devis</a></li>
+        </ul>
+    </section>
+
+    <!-- ------------------------------ -->
     <!-- -------SECTION DE CONTROL----- -->
     <!-- ------------------------------ -->
     <section id="control-section"></section>
@@ -38,6 +52,6 @@
     <!-- -------SECTION D'ÉDITION------ -->
     <!-- --------SECTION D'AJOUT------- -->
     <!-- ------------------------------ -->
-    <section id="edit-section"></section>
+    <section id="add-edit-section"></section>
 </main>
 <script type="module" src="assets/js/dashboard.js"></script>
