--- a/assets/styles/css/style.css
+++ b/assets/styles/css/style.css
@@ -18,7 +18,7 @@
 
 .edit-btn {
   height: 1.25rem;
-  width: 3rem;
+  width: 3.5rem;
   margin-left: 0.75rem;
   background-color: blue;
   color: white;
@@ -53,7 +53,12 @@ tr, td, th {
   white-space: nowrap;
 }
 
-tr td, th:first-child {
+.col-id {
   min-width: 0;
-  max-width: 1.5rem;
+  max-width: 2.5rem;
+}
+
+.col-other {
+  min-width: 0;
+  max-width: 6rem;
 }/*# sourceMappingURL=style.css.map */
